k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web3-smartwatch-server
  labels:
    app: web3-smartwatch-server
  namespace: web3-smartwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web3-smartwatch-server
  template:
    metadata:
      labels:
        app: web3-smartwatch-server
    spec:
      containers:
      - name: web3-smartwatch-server
        image: ghcr.io/web3-smart-wallet/web3-smartwatch-go-server:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
