k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web3-smartwatch-server
  labels:
    app: web3-smartwatch-server
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: web3-smartwatch-server
